[gd_scene load_steps=29 format=3 uid="uid://bmvk888sldjsn"]

[ext_resource type="Script" path="res://src/game/entities/enemies/SkeletonBoss.gd" id="1_31tw1"]
[ext_resource type="Texture2D" uid="uid://dv1arb71f0v3u" path="res://assets/textures/enemies/skeleton/Take Hit.png" id="1_a84c8"]
[ext_resource type="Texture2D" uid="uid://d38o62xmvclfx" path="res://assets/textures/enemies/skeleton/Attack.png" id="2_c4gtm"]
[ext_resource type="Texture2D" uid="uid://jdf8j336ufx2" path="res://assets/textures/enemies/skeleton/Death.png" id="3_uw1t1"]
[ext_resource type="Texture2D" uid="uid://fpbd218nnuvx" path="res://assets/textures/enemies/skeleton/Idle.png" id="4_7c8rm"]
[ext_resource type="Texture2D" uid="uid://bldjhmqmnnnor" path="res://assets/textures/enemies/skeleton/Walk.png" id="5_6qa2k"]
[ext_resource type="Script" path="res://src/game/scripts/HitBox.gd" id="6_yxh3t"]
[ext_resource type="Script" path="res://src/game/scripts/HurtBox.gd" id="7_tshhr"]
[ext_resource type="Script" path="res://src/game/scripts/Movement.gd" id="8_4558c"]
[ext_resource type="Script" path="res://src/game/entities/Health.gd" id="9_4x0q5"]
[ext_resource type="Script" path="res://src/game/scripts/StateMachine.gd" id="11_nht7n"]
[ext_resource type="Script" path="res://src/game/entities/enemies/states/SkeletonBoss/SkeletonBossStateIdle.gd" id="12_bssmh"]
[ext_resource type="Script" path="res://src/game/entities/enemies/states/SkeletonBoss/SkeletonBossStateHit.gd" id="13_178lk"]
[ext_resource type="AudioStream" uid="uid://cf5dtoukkigx6" path="res://assets/sounds/fx/enemies/skeleton-hurt-sound.mp3" id="14_glcr3"]
[ext_resource type="Script" path="res://src/game/entities/enemies/states/SkeletonBoss/SkeletonBossStateFollowing.gd" id="15_b4c6d"]
[ext_resource type="Script" path="res://src/game/entities/enemies/states/SkeletonBoss/SkeletonBossStateDead.gd" id="15_i5742"]
[ext_resource type="Script" path="res://src/game/entities/enemies/states/SkeletonBoss/SkeletonBossStateAttacking.gd" id="16_tus64"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghw0l"]
size = Vector2(50, 11)

[sub_resource type="Animation" id="Animation_j8fxo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot/Body:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_a84c8")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/HurtBox/HurtCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/Hitbox/HitCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g1ghj"]
resource_name = "attack"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c4gtm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.366667, 0.466667, 0.566667, 0.633333, 0.733333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/Hitbox/HitCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}

[sub_resource type="Animation" id="Animation_hg3ny"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_uw1t1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.466667, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/HurtBox/HurtCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/Hitbox/HitCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_ofmfb"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_a84c8")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/HurtBox/HurtCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/Hitbox/HitCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_81dm5"]
resource_name = "idle"
length = 0.37
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_7c8rm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/HurtBox/HurtCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/Hitbox/HitCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.366667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_2b2k3"]
resource_name = "walk"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_6qa2k")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/HurtBox/HurtCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/Hitbox/HitCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_alouh"]
_data = {
"RESET": SubResource("Animation_j8fxo"),
"attack": SubResource("Animation_g1ghj"),
"dead": SubResource("Animation_hg3ny"),
"hit": SubResource("Animation_ofmfb"),
"idle": SubResource("Animation_81dm5"),
"walk": SubResource("Animation_2b2k3")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ve5au"]
radius = 50.0
height = 154.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y7117"]
radius = 7.0
height = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y13mr"]
radius = 460.053

[node name="SkeletonBoss" type="CharacterBody2D"]
script = ExtResource("1_31tw1")
zone = 5

[node name="FeetShape" type="CollisionShape2D" parent="."]
position = Vector2(7, 46.5)
shape = SubResource("RectangleShape2D_ghw0l")

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_alouh")
}
autoplay = "idle"

[node name="BodyPivot" type="Node2D" parent="."]

[node name="Body" type="Sprite2D" parent="BodyPivot"]
modulate = Color(1, 0.933333, 0, 1)
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("1_a84c8")
hframes = 4

[node name="Hitbox" type="Area2D" parent="BodyPivot"]
collision_layer = 512
collision_mask = 0
script = ExtResource("6_yxh3t")
damage = 1
layer = 10

[node name="HitCollision" type="CollisionShape2D" parent="BodyPivot/Hitbox"]
position = Vector2(69, 2)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_ve5au")
disabled = true

[node name="HurtBox" type="Area2D" parent="BodyPivot"]
collision_layer = 0
collision_mask = 16
script = ExtResource("7_tshhr")
layer = 0
mask = 5

[node name="HurtCollision" type="CollisionShape2D" parent="BodyPivot/HurtBox"]
position = Vector2(2, 4)
shape = SubResource("CapsuleShape2D_y7117")
disabled = true

[node name="Movement" type="Node" parent="."]
script = ExtResource("8_4558c")
speed = 30.0

[node name="Health" type="Node" parent="."]
script = ExtResource("9_4x0q5")
life_max = 2
health_max = 8

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2(0, 24)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
visible = false
position = Vector2(0, -24)
shape = SubResource("CircleShape2D_y13mr")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("default_state")]
script = ExtResource("11_nht7n")
default_state = NodePath("SkeletonBossStateIdle")

[node name="SkeletonBossStateIdle" type="Node" parent="StateMachine"]
script = ExtResource("12_bssmh")

[node name="IdleTimer" type="Timer" parent="StateMachine/SkeletonBossStateIdle"]
wait_time = 2.0

[node name="SkeletonBossStateHit" type="Node" parent="StateMachine"]
script = ExtResource("13_178lk")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="StateMachine/SkeletonBossStateHit"]
stream = ExtResource("14_glcr3")
volume_db = 4.0
pitch_scale = 0.8
bus = &"Boss"

[node name="SkeletonBossStateFollowing" type="Node" parent="StateMachine"]
script = ExtResource("15_b4c6d")

[node name="SkeletonBossStateDead" type="Node" parent="StateMachine"]
script = ExtResource("15_i5742")

[node name="SkeletonBossStateAttacking" type="Node" parent="StateMachine"]
script = ExtResource("16_tus64")

[connection signal="found" from="." to="StateMachine/SkeletonBossStateIdle" method="_on_skeleton_boss_found"]
[connection signal="hurting" from="." to="StateMachine/SkeletonBossStateIdle" method="_on_skeleton_boss_hurting"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine/SkeletonBossStateHit" method="_on_body_animations_animation_finished"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine/SkeletonBossStateDead" method="_on_body_animations_animation_finished"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine/SkeletonBossStateAttacking" method="_on_body_animations_animation_finished"]
[connection signal="area_entered" from="BodyPivot/HurtBox" to="BodyPivot/HurtBox" method="_on_area_entered"]
[connection signal="dead" from="Health" to="." method="_on_health_dead"]
[connection signal="dead" from="Health" to="StateMachine/SkeletonBossStateIdle" method="_on_health_dead"]
[connection signal="dead_completly" from="Health" to="." method="_on_health_dead_completly"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="StateMachine/SkeletonBossStateIdle/IdleTimer" to="StateMachine/SkeletonBossStateIdle" method="_on_idle_timer_timeout"]
